css/checker/tests/prop_border.out
css/checker/tests/prop_border.css:3:19: error: property "border-color" can have a maximum of 4 values!
    1 | 
    2 | .nr_values {
    3 |     border-color: red green blue black orange;
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    4 |     border-top-color: green red;
    5 |
css/checker/tests/prop_border.css:4:23: error: property "border-top-color" only expects 1 value!
    2 | .nr_values {
    3 |     border-color: red green blue black orange;
    4 |     border-top-color: green red;
      |                       ~~~~~~~~~~
    5 | 
    6 |     border-style: dotted dashed double groove inset;
css/checker/tests/prop_border.css:6:19: error: property "border-style" can have a maximum of 4 values!
    4 |     border-top-color: green red;
    5 | 
    6 |     border-style: dotted dashed double groove inset;
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    7 |     border-top-style: dotted dashed;
    8 | }
css/checker/tests/prop_border.css:7:23: error: property "border-top-style" only expects 1 value!
    5 | 
    6 |     border-style: dotted dashed double groove inset;
    7 |     border-top-style: dotted dashed;
      |                       ~~~~~~~~~~~~~~
    8 | }
    9 |
css/checker/tests/prop_border.css:11:19: error: invalid value for property "border-color"!
    9 | 
   10 | .invalid_values {
   11 |     border-color: 10px;
      |                   ~~~~
   12 |     border-style: "wjat!!";
   13 | }
css/checker/tests/prop_border.css:12:19: error: invalid value for property "border-style"!
   10 | .invalid_values {
   11 |     border-color: 10px;
   12 |     border-style: "wjat!!";
      |                   ~~~~~~~~
   13 | }
   14 |
css/checker/tests/prop_border.css:16:19: error: only 1 border-style value is allowed for property "border"
   14 | 
   15 | .border {
   16 |     border: solid solid;
      |                   ~~~~~
   17 |     border: 2px 2px;
   18 |     border: red red;
css/checker/tests/prop_border.css:17:17: error: only 1 dimension value is allowed for property "border"
   15 | .border {
   16 |     border: solid solid;
   17 |     border: 2px 2px;
      |                 ~~~
   18 |     border: red red;
   19 |     border: solid red 2px green;
css/checker/tests/prop_border.css:18:17: error: only 1 color value is allowed for property "border"
   16 |     border: solid solid;
   17 |     border: 2px 2px;
   18 |     border: red red;
      |                 ~~~
   19 |     border: solid red 2px green;
   20 |     border: inherit;
css/checker/tests/prop_border.css:19:13: error: property "border" can have a maximum of 3 values!
   17 |     border: 2px 2px;
   18 |     border: red red;
   19 |     border: solid red 2px green;
      |             ~~~~~~~~~~~~~~~~~~~~
   20 |     border: inherit;
   21 | }
css/checker/tests/prop_border.css:24:25: error: expecting a length or percentage after "/"
   22 | 
   23 | .radius {
   24 |     border-radius: 10px / ;
      |                         ^
   25 |     border-radius: 1px 2px 3px 4px 5px;
   26 |     border-top-left-radius: 20px / ;
css/checker/tests/prop_border.css:25:36: error: property "border-radius" can have a maximum of 4 values
   23 | .radius {
   24 |     border-radius: 10px / ;
   25 |     border-radius: 1px 2px 3px 4px 5px;
      |                                    ~~~
   26 |     border-top-left-radius: 20px / ;
   27 |     border-top-left-radius: 1px 2px 3px 4px;
css/checker/tests/prop_border.css:26:29: error: invalid value for property "border-top-left-radius"
   24 |     border-radius: 10px / ;
   25 |     border-radius: 1px 2px 3px 4px 5px;
   26 |     border-top-left-radius: 20px / ;
      |                             ~~~~~~~~
   27 |     border-top-left-radius: 1px 2px 3px 4px;
   28 |     border-top-left-radius: 1px 2px 3px;
css/checker/tests/prop_border.css:27:29: error: invalid value for property "border-top-left-radius"
   25 |     border-radius: 1px 2px 3px 4px 5px;
   26 |     border-top-left-radius: 20px / ;
   27 |     border-top-left-radius: 1px 2px 3px 4px;
      |                             ~~~~~~~~~~~~~~~~
   28 |     border-top-left-radius: 1px 2px 3px;
   29 | }
css/checker/tests/prop_border.css:28:33: error: expecting a "/"
   26 |     border-top-left-radius: 20px / ;
   27 |     border-top-left-radius: 1px 2px 3px 4px;
   28 |     border-top-left-radius: 1px 2px 3px;
      |                                 ~~~
   29 | }